# roiapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
roiapi/: api.py  main.py  models.py  services.py
tests/: test_generate.py
